# ehfheatwaves

./: .travis.yml  README.md  ehfheatwaves.py  ehfheatwaves_AWAP.py  ehfheatwaves_CMIP5.py  getoptions.py  hwdata.npy  ncio.py  pyproject.toml  qtiler.py  quantile_zhang.py  run_tests.py  setup.cfg  version
.github/: workflows
.github/workflows/: actions.yaml
contrib/: percent_summer.py
ehfheatwaves/: __init__.py  constants.py  ehfheatwaves.py  getoptions.py  makemask.py  ncio.py  qtiler.py
tests/: run_tests.py
