[metadata]
name = ehfheatwaves
version = 1.1.5
author = Tammas Loughran
author_email = tammas.loughran@csiro.au
description = A tool to calculate heatwaves from gridded daily datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tammasloughran/ehfheatwaves
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = ehfheatwaves
install_requires =
    numpy>=1.8.0

[options.entry_points]
console_scripts =
    ehfheatwaves = ehfheatwaves:main

