[metadata]
name = ehfheatwaves
version = attr: ehfheatwaves.__version__
author = Tammas Loughran
author_email = tammas.loughran@csiro.au
description = A tool to calculate heatwaves from gridded daily datasets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tammasloughran/ehfheatwaves
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = ehfheatwaves
install_requires =
    numpy>=1.8.0
    pandas
    netcdf4

[options.entry_points]
console_scripts =
    ehfheatwaves = ehfheatwaves:main

